[package]
name = "owlibou_tavern"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.5.1", features = ["ssr"] }
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
serde = { version = "1.0.203", features = ["derive"] }
log = "0.4.21"
